--- a/usememoprac/package.json
+++ b/usememoprac/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1"
   },
+  "homepage": "https://artem-dykyi.github.io/pracUseMemo/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build --public-url ./",
